--- a/PersonalWebPage/css/style.css
+++ b/PersonalWebPage/css/style.css
@@ -10,13 +10,15 @@
 }
 
 .navbar-brand{
-    color: #004aad !important;
+    background-image: linear-gradient(45deg, #000000, #3533cd);/* Horizontal gradient */
+    -webkit-background-clip: text;/* Applies gradient to text */
+    -webkit-text-fill-color: transparent;
 }
 
 /* MAIN */
 .badge{
     margin-top: 20px;
-    background: linear-gradient(45deg, #004aad, #5de0e6);
+    background: linear-gradient(45deg, #000000, #3533cd);
 }
 
 .margin-content{
@@ -24,20 +26,18 @@
 
 }
 
-@media (min-width: 768px) { /* Tablets e desktops */
-    .margin-contentr {
-        padding: 15px 100px !important;
-    }
-}
-
 
 .title {
     /* Gradient collar in the text */
     font-weight: bold;
-    background-image: linear-gradient(45deg, #004aad, #5de0e6 );/* Horizontal gradient */
+    background-image: linear-gradient(45deg, #000000, #3533cd);/* Horizontal gradient */
     -webkit-background-clip: text;/* Applies gradient to text */
     -webkit-text-fill-color: transparent;
     border-top: 100px !important;
+}
+
+.profile-image{
+    width: 30%;
 }
 
 /* ABOUT ME CONTENT */
@@ -62,7 +62,7 @@
 .social-links a {
     font-size: 32px; /* Ajust size icon */
     display: inline-block;
-    background: linear-gradient(45deg, #004aad, #5de0e6);
+    background: linear-gradient(45deg,#000000, #3533cd);
     -webkit-background-clip: text; 
     -webkit-text-fill-color: transparent; 
     transition: transform 0.3s ease-in-out; /* Animation */
