--- a/PersonalWebPage/css/style.css
+++ b/PersonalWebPage/css/style.css
@@ -1,67 +1,114 @@
-/* NAVBAR */
-.navbar {
-    padding: 10px 20px !important;
+/* GLOBAL */
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
-@media (min-width: 768px) { /* Tablets e desktops */
-    .navbar {
-        padding: 15px 50px !important;
-    }
+body {
+    font-size: 100%;
 }
 
 .navbar-brand{
-    background-image: linear-gradient(45deg, #000000, #3533cd);/* Horizontal gradient */
+    background-image: linear-gradient(90deg, #000000, #3533cd);/* Horizontal gradient */
+    -webkit-background-clip: text;/* Applies gradient to text */
+    -webkit-text-fill-color: transparent;
+    font-family: "Righteous", serif;
+    font-weight: 400;
+    padding: 24px;
+}
+
+.nav-link-style{
+    font-family: "Sarala", serif;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+/* HOME PAGE */
+.content{
+    margin-bottom: 48px;
+}
+
+.content-main{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.content-main-written{
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
+}
+
+.content-main-written-title{
+    font-family: "Righteous", serif;
+    font-weight: 400;
+    font-size: 64px;
+    background-image: linear-gradient(90deg, #000000, #3533cd);/* Horizontal gradient */
     -webkit-background-clip: text;/* Applies gradient to text */
     -webkit-text-fill-color: transparent;
 }
 
-/* MAIN */
-.badge{
-    margin-top: 20px;
-    background: linear-gradient(45deg, #000000, #3533cd);
+.content-main-written-subtitle{
+    font-family: "Sarala", serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: #000000;
 }
 
-.margin-content{
-    padding: 30px;
-
+.content-main-written-button{
+    background-image: linear-gradient(90deg, #000000, #3533cd);/* Horizontal gradient */
+    width: 180px;
+    height: 60px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: #090808;
 }
 
-
-.title {
-    /* Gradient collar in the text */
-    font-weight: bold;
-    background-image: linear-gradient(45deg, #000000, #3533cd);/* Horizontal gradient */
-    -webkit-background-clip: text;/* Applies gradient to text */
-    -webkit-text-fill-color: transparent;
-    border-top: 100px !important;
+.content-main-image{
+    height: 430px;
 }
 
-.profile-image{
-    width: 30%;
+.content-secondary{
+    display: contents;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
 }
 
-/* ABOUT ME CONTENT */
-.about-me-content {
+.content-secondary-title{
+    padding-top: 48px;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.content-secondary-paragraph{
+    text-justify: auto;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #000000;
     text-align: justify;
-    padding: 20px;
 }
 
-@media (min-width: 768px) { /* Tablets e desktops */
-    .about-me-content {
-        padding: 40px 80px;
-    }
-}
-
-@media (min-width: 1200px) { /* Telas muito grandes */
-    .about-me-content {
-        padding: 60px 120px;
-    }
-}
-
-/* SOCIAL LINKS */
-.social-links a {
+.footer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     font-size: 32px; /* Ajust size icon */
-    display: inline-block;
     background: linear-gradient(45deg,#000000, #3533cd);
     -webkit-background-clip: text; 
     -webkit-text-fill-color: transparent; 
@@ -69,12 +116,8 @@
     margin: 10px;
 }
 
-.social-links a:hover {
-    transform: scale(1.2); /* Efeito de zoom ao passar o mouse */
-}
-
-/* Resume */
-.card {
-    flex-direction: row !important;
-    flex-wrap: wrap !important;
+.footer-icon{
+    height: 48px;
+    display: block;
+    margin: 0 auto;
 }
