--- a/PersonalWebPage/css/style.css
+++ b/PersonalWebPage/css/style.css
@@ -200,3 +200,28 @@ body {
     justify-content: space-around;
     gap: 20px;
 }
+
+.content-skills{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.card-skills{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    background-image: linear-gradient(90deg, #000000, #3533cd);/* Horizontal gradient */
+    width: 140px;
+    height: 40px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #ffffff;
+}
