Agenda javascript - Add table elements

--- a/PersonalWebPage/css/style.css
+++ b/PersonalWebPage/css/style.css
@@ -225,3 +225,13 @@ body {
     font-size: 18px;
     color: #ffffff;
 }
+
+.table {
+    width: 100%;
+    table-layout: fixed;
+}
+
+.table th, .table td {
+    width: 33.33%;
+    padding: 10px; 
+}
